# migraph

./: .gitignore  README.md  conftest.py  pyproject.toml
backend/: run_migraph.py
backend/app/: config.py  constants.py  dependencies.py  main.py
backend/app/api/: routes_graph.py  routes_query.py  schemas.py
backend/app/loaders/: graph_loader.py
backend/app/services/: graphrag_service.py
backend/tests/: conftest.py  test_api.py  test_end_to_end.py  test_graph_core.py  test_retrieval_trace.py
deploy/: requirement-dev.txt  requirements-api.txt  requirements.txt
frontend/: requirements.txt  streamlit_app.py
frontend/components/: answer_panel.py  bias_selector.py  graph_view.py  memory_timeline.py  query_box.py  shock_gauge.py  stability_panel.py
frontend/services/: api_client.py
frontend/styles/: theme.css
notebooks/: datasets_download.ipynb  etl.ipynb
src/migraph/: __init__.py
src/migraph/agents/: __init__.py  base_agent.py  causal_agent.py  conservative_agent.py  explorer_agent.py  judge_agent.py  skeptic_agent.py
src/migraph/bias/: __init__.py  bias_profiles.py
src/migraph/config/: __init__.py  settings.py
src/migraph/embeddings/: __init__.py  encoder.py  hf_encoder.py  similarity.py
src/migraph/evaluation/: __init__.py  confidence.py  metrics.py
src/migraph/graph/: __init__.py  graph_builder.py  graph_mutator.py  graph_query.py  graph_schema.py  graph_store.py
src/migraph/memory/: __init__.py  episodic.py  replay.py
src/migraph/rag/: __init__.py  context_builder.py  entity_inferer.py  generator.py  hf_llama_backend.py  retriever.py  (+1 more)
(+10 files in other folders)
