[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "migraph"
version = "0.1.0"
description = "Mutable-inference GraphRAG library for shock-aware, counterfactual, and uncertainty-aware reasoning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Santanu Mitra" }
]

keywords = [
    "graphrag",
    "knowledge-graph",
    "counterfactual-reasoning",
    "uncertainty-aware-ai",
    "shock-aware-systems",
    "agentic-ai"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "networkx>=3.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pydantic>=2.5"
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27"
]

ui = [
    "streamlit>=1.32",
    "pyvis>=0.3.2"
]

dev = [
    "pytest>=7.4",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.9"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
